Record Texter in database
This commit adds the functionality to record each Texter in the
database. It also includes an update in configuration, where we were
specifying an improper environment variable for connecting to the
database.

Signed-off-by: mattjmcnaughton <mattjmcnaughton@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   global:
   - ENVIRONMENT=TEST
   - SECRET_KEY=jklwefa209aergnjaflkmwaeoi
-  - DATABASE_URL=postgres://postgres:localhost:5432/postgres
+  - DATABASE_URL=postgres://postgres@localhost:5432/postgres
 python:
 - '3.5'
 install:
